fixed icon overlap

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -158,7 +158,6 @@
                        justify-content: center;
                        text-align: center;
                        margin: auto;
-                       z-index: 9999;
                        text-align: center;
                        position: relative;
                    }
